--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "dependencies": {
-    "serverless-python-requirements": "^6.0.0"
+  "devDependencies": {
+    "serverless-python-requirements": "^6.0.1"
   }
 }
